--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,14 @@
         rel="stylesheet">
     <!-- BEGIN VENDOR CSS-->
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/vendors.css">
-    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/vendors/css/forms/icheck/icheck.css">
-    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/vendors/css/forms/icheck/custom.css">
+    <!-- <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/vendors/css/forms/spinner/jquery.bootstrap-touchspin.css"> -->
+    <!-- <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/vendors/css/forms/icheck/icheck.css"> -->
+    <!-- <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/vendors/css/forms/icheck/custom.css"> -->
+    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/vendors/css/forms/toggle/switchery.min.css">
+    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/fonts/meteocons/style.css">
+    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/vendors/css/extensions/unslider.css">
+    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/vendors/css/weather-icons/climacons.min.css">
+    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/vendors/css/extensions/toastr.css">
     <!-- END VENDOR CSS-->
     <!-- BEGIN STACK CSS-->
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/app.css">
@@ -33,16 +39,22 @@
     <!-- BEGIN Page Level CSS-->
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/core/menu/menu-types/vertical-menu-modern.css">
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/core/colors/palette-gradient.css">
+    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/plugins/forms/validation/form-validation.css">
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/pages/login-register.css">
+    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/plugins/forms/switch.css">
+    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/fonts/simple-line-icons/style.css">
+    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/pages/timeline.css">
+    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/plugins/extensions/toastr.css">
     <!-- END Page Level CSS-->
     <!-- BEGIN Custom CSS-->
+    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/react-redux-toastr.min.css">
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/style.css">
     <!-- END Custom CSS-->
     <title>React App</title>
 </head>
 
-<body class="vertical-layout vertical-menu-modern 1-column  bg-full-screen-image menu-expanded blank-page blank-page"
-    data-open="click" data-menu="vertical-menu-modern" data-col="1-column">
+<body class="vertical-layout vertical-menu-modern 2-columns menu-expanded fixed-navbar" data-open="click" data-menu="vertical-menu-modern"
+    data-col="2-columns">
     <noscript>
         You need to enable JavaScript to run this app.
     </noscript>
@@ -62,8 +74,15 @@
 <script src="%PUBLIC_URL%/vendors/js/vendors.min.js" type="text/javascript"></script>
 <!-- BEGIN VENDOR JS-->
 <!-- BEGIN PAGE VENDOR JS-->
-<script src="%PUBLIC_URL%/vendors/js/forms/validation/jqBootstrapValidation.js" type="text/javascript"></script>
-<script src="%PUBLIC_URL%/vendors/js/forms/icheck/icheck.min.js" type="text/javascript"></script>
+<!-- <script src="%PUBLIC_URL%/vendors/js/forms/spinner/jquery.bootstrap-touchspin.js" type="text/javascript"></script> -->
+<!-- <script src="%PUBLIC_URL%/vendors/js/forms/validation/jqBootstrapValidation.js" type="text/javascript"></script> -->
+<!-- <script src="%PUBLIC_URL%/vendors/js/forms/icheck/icheck.min.js" type="text/javascript"></script> -->
+<script src="%PUBLIC_URL%/vendors/js/forms/toggle/switchery.min.js" type="text/javascript"></script>
+<script src="%PUBLIC_URL%/vendors/js/charts/raphael-min.js" type="text/javascript"></script>
+<script src="%PUBLIC_URL%/vendors/js/charts/morris.min.js" type="text/javascript"></script>
+<script src="%PUBLIC_URL%/vendors/js/extensions/unslider-min.js" type="text/javascript"></script>
+<script src="%PUBLIC_URL%/vendors/js/timeline/horizontal-timeline.js" type="text/javascript"></script>
+<script src="%PUBLIC_URL%/vendors/js/extensions/toastr.min.js" type="text/javascript"></script>
 <!-- END PAGE VENDOR JS-->
 <!-- BEGIN STACK JS-->
 <script src="%PUBLIC_URL%/js/core/app-menu.js" type="text/javascript"></script>
@@ -71,7 +90,10 @@
 <script src="%PUBLIC_URL%/js/scripts/customizer.js" type="text/javascript"></script>
 <!-- END STACK JS-->
 <!-- BEGIN PAGE LEVEL JS-->
+<!-- <script src="%PUBLIC_URL%/js/scripts/forms/validation/form-validation.js" type="text/javascript"></script> -->
+<script src="%PUBLIC_URL%/js/scripts/pages/dashboard-ecommerce.js" type="text/javascript"></script>
 <script src="%PUBLIC_URL%/js/scripts/forms/form-login-register.js" type="text/javascript"></script>
+<script src="%PUBLIC_URL%/js/scripts/extensions/toastr.js" type="text/javascript"></script>
 <!-- END PAGE LEVEL JS-->
 
 </html>
